# android-3d

./: build.gradle  keystore.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/keystores/: create_debug_keystore - Copie.bat  create_release_keystore - Copie.bat  create_release_keystore.sh  debug.keystore  release.keystore
app/src/androidTest/java/com/example/webviewar/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  package-lock.json  package.json
app/src/main/assets/: custom-patterns.html  fragment.glsl  hello-cube.html  index.html  vertex.glsl
app/src/main/cpp/: RendererES2.cpp  RendererES3.cpp  background_rendering.cpp  gl3stub.c  gles3jni.cpp  native-lib.cpp  shader.cpp
app/src/main/cpp/include/: animation.h  animator.h  animdata.h  asset_extractor.h  bone.h  camera.h  gles3jni.h  mesh.h  model.h  native-lib.h  object_renderer.h  shader.h  util.h  viewfinder_renderer.h
app/src/main/java/com/example/webviewar/: ARActivity.kt  AssetsUtils.java  CameraPermission.kt  GLES3JNIActivity.java  GLES3JNILib.java  GLES3JNIView.java  GLSL.kt  GLUtils.java  Home.kt  MainActivity.kt  NativeLibActivity.kt  Renderer.java  Shader.kt
app/src/main/res/layout/: activity_home.xml  activity_main.xml  activity_native_lib.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/webviewar/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
